feat(server): add PartnerProfileController
